@@ -4,6 +4,9 @@ Changelog
 1.2.1 (unreleased)
 ------------------
 
+- Added browserview returning available languages.
+  [Julian Infanger]
+
 - Refactor the language selector to be a "actionMenu" instead of a linklist
   and show the language selector on the site root too, when subsites are
   configured to show the site root as language.
